1. Fix gradle -x not working 2. Enable detekt
Signed-off-by: Hailong Cui <ihailong@amazon.com>